# melody-matcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  full_codebase_context.txt  pyproject.toml  test_pipeline.py  twinkle.m4a
data/index/: melody_index.json
data/v2/processed/: popularity_scores.json
scripts/: build_index.py  run_search.py
scripts/v2/: build_corpus.py  eval.py  fetch_popularity.py  ingest_lakh.py  search.py  setup_eval.py  test_extractor.py  test_transcriber.py
src/melody_matcher/data/: lakh_parser.py  lastfm_client.py
src/melody_matcher/eval/: dataset_loader.py  metrics.py
src/melody_matcher/features/: interval_encoder.py
src/melody_matcher/io/: audio_transcriber.py  midi_reader.py
src/melody_matcher/preprocessing/: melody_extractor.py  normalizer.py  segmenter.py
src/melody_matcher/retrieval/: search_engine.py
src/melody_matcher/search/: search_service.py
src/melody_matcher/storage/: index_store.py
tests/data/: test_lakh_parser.py
venv311/: pyvenv.cfg
