[project]
name = "melody-matcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "pretty_midi>=0.2.10",
    "pandas>=2.0",
    "fastdtw>=0.3.4",
    "pyarrow>=14.0",
    "basic-pitch>=0.3.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pyloudnorm>=0.1",
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths  = ["tests"]
log_cli    = false
